# tapssp-project

./: Cargo.toml  LICENSE  README.md
docs/: config_guide.txt  logging_example.rs  rust_intro.md  systems_programming.md
src/: cli.rs  embedder.rs  ingest.rs  lib.rs  main.rs  models.rs  query.rs  stats.rs  store.rs
tests/: basic_flow.rs
